--- a/style.css
+++ b/style.css
@@ -337,7 +337,7 @@ nav {
 .post-img {
     width: 100%;
     border-radius: 4px;
-    margin-bottom: 5px;
+    margin-bottom: 15px;
 }
 .post-row {
     display: flex;
@@ -361,4 +361,7 @@ nav {
     width: 20px;
     border-radius: 50%;
     margin-right: 5px;
+}
+.post-row a {
+    color: #9a9a9a;
 }
