--- a/style.css
+++ b/style.css
@@ -385,7 +385,6 @@ nav {
     position: absolute;
     width: 90%;
     max-width: 350px;
-    height: 500px;
     background: #fff;
     box-shadow: 0 0 10px rgba(0, 0, 0, .4);
     border-radius: 4px;
@@ -400,4 +399,22 @@ nav {
 }
 .settings-menu-inner {
     padding: 20px;
+}
+.settings-links {
+    display: flex;
+    align-items: center;
+    margin: 15px 0;
+}
+.settings-links .settings-icon {
+    width: 38px;
+    margin-right: 10px;
+    border-radius: 50%;
+}
+.settings-links a {
+    display: flex;
+    flex: 1;
+    align-items: center;
+    justify-content: space-between;
+    text-decoration: none;
+    color: #626262;
 }
