--- a/style.css
+++ b/style.css
@@ -3,14 +3,26 @@
     margin: 0;
     box-sizing: border-box;
 }
+:root {
+    --body-color: #efefef;
+    --nav-color: #1876f2;
+    --bg-color: #fff;
+}
+.dark-theme {
+    --body-color: #0a0a0a;
+    --nav-color: #000;
+    --bg-color: #000;
+}
+
 body {
-    background-color: #efefef;
+    background-color: var(--body-color);
+    transition: .3s;
 }
 nav {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    background: #1978f2;
+    background: var(--nav-color);
     padding: 5px 5%;
     position: sticky;
     top: 0;
@@ -44,6 +56,7 @@ nav {
     background: #efefef;
     width: 350px;
     border-radius: 20px;
+    display: flex;
     align-items: center;
     padding: 0 15px;
 }
@@ -88,7 +101,7 @@ nav {
     position: sticky;
     top: 70px;
     align-self: flex-start;
-    background: #fff;
+    background: var(--bg-color);
     padding: 20px;
     border-radius: 4px;
     color: #626262;
@@ -258,7 +271,7 @@ nav {
 
 .write-post-container {
     width: 100%;
-    background: #fff;
+    background: var(--bg-color);
     border-radius: 6px;
     padding: 20px;
     color: #626262;
@@ -311,7 +324,7 @@ nav {
 } 
 .post-container {
     width: 100%;
-    background: #fff;
+    background: var(--bg-color);
     border-radius: 6px;
     padding: 20px;
     color: #626262;
@@ -385,7 +398,7 @@ nav {
     position: absolute;
     width: 90%;
     max-width: 350px;
-    background: #fff;
+    background: var(--bg-color);
     box-shadow: 0 0 10px rgba(0, 0, 0, .4);
     border-radius: 4px;
     overflow: hidden;
@@ -422,4 +435,27 @@ nav {
     justify-content: space-between;
     text-decoration: none;
     color: #626262;
+}
+#dark-btn {
+    position: absolute;
+    top: 20px;
+    right: 20px;
+    background: #ccc;
+    width: 45px;
+    border-radius: 15px;
+    padding: 2px 3px;
+    cursor: pointer;
+    display: flex;
+    transition: .5s;
+}
+#dark-btn span {
+    width: 18px;
+    height: 18px;
+    background: #fff;
+    border-radius: 50%;
+    display: inline-block;
+}
+#dark-btn.dark-btn-on {
+    padding-left: 23px;
+    background: #0a0a0a;
 }
