--- a/style.css
+++ b/style.css
@@ -555,6 +555,27 @@ nav {
 }
 .intro-text {
     text-align: center;
-    margin: 10px;
+    margin: 10px 0;
     font-size: 15px;
+}
+.intro-text img {
+    width: 15px;
+    margin-bottom: -3px;
+}
+.profile-intro hr {
+    border: 0;
+    height: 1px;
+    background: #ccc;
+    margin: 24px 0;
+}
+.profile-intro ul li {
+    list-style: none;
+    font-size: 15px;
+    margin: 15px 0;
+    display: flex;
+    align-items: center;
+}
+.profile-intro ul li img {
+    width: 26px;
+    margin-right: 10px;
 }
