--- a/style.css
+++ b/style.css
@@ -579,3 +579,45 @@ nav {
     width: 26px;
     margin-right: 10px;
 }
+.title-box {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+.title-box a {
+    text-decoration: none;
+    color: #1876f2;
+    font-size: 14px;
+}
+.photo-box {
+    display: grid;
+    grid-template-columns: repeat(3, auto);
+    grid-gap: 10px;
+    margin-top: 15px;
+}
+.photo-box div img {
+    width: 100%;
+    cursor: pointer;
+}
+.profile-intro p {
+    font-size: 14px;
+}
+.friends-box {
+    display: grid;
+    grid-template-columns: repeat(3, auto);
+    grid-gap: 10px;
+    margin-top: 15px;
+}
+.friends-box div img {
+    width: 100%;
+    cursor: pointer;
+    padding-bottom: 20px;
+}
+.friends-box div {
+    position: relative;
+}
+.friends-box p {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+}
